--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ header{
     font-size: 47px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(0, 0, 0);
+    margin-top: 50px;
 }
 
 #RPS_icon{
@@ -21,8 +22,7 @@ body{
 #main_container{
     display: flex;
     justify-content: center;
-    position: relative;
-    top: 100px;
+    margin-top: 50px;
 }
 
 #button_container{
@@ -43,12 +43,40 @@ body{
     border-radius: 50%;
 }
 
-#button_img{
+#menu_button_img{
     height: 300px;
 }
 
 #button :hover{
     border: 1;
     border-radius: 50%;
-    box-shadow: 3px 3px 10px lightgray, -3px -3px 10px lightgray, -3px 3px 10px lightgray, 3px -3px 10px lightgray;
+    box-shadow: 3px 3px 20px lightgray, -3px -3px 20px lightgray, -3px 3px 20px lightgray, 3px -3px 20px lightgray;
+}
+
+#subtitle_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#subtitle{
+    margin: 20px;
+    margin-left: 115px;
+    margin-right: 80px;
+    font-size: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(105, 105, 105);
+}
+
+#description_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+}
+
+#description{
+    font-size: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(105, 105, 105);
 }
