--- a/styles.css
+++ b/styles.css
@@ -35,18 +35,59 @@ body{
 }
 
 .button_container2{
-    width: 1125px !important;
+    height: 294px !important;
+    width: 924px !important;
+}
+
+#menu_button_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#game_button_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #button{
-    height: 300px;
+    height: 252px;
+    width: 252px;
+    margin: 50px;
+    border: 1;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#button2{
+    height: 252px;
+    width: 252px;
     margin: 25px;
     border: 1;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #menu_button_img{
     height: 300px;
+    transition: 0.4s !important;
+}
+
+.menu_button_img2{
+    height: 252px !important;
+    transition: 0.4s !important;
+    opacity: 0 !important;
+}
+
+#game_button_img{
+    height: 252px;
+    width: 252px;
+    transition: 0.4s;
 }
 
 #button :hover{
@@ -59,6 +100,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.3s;
+    pointer-events: none;
+    user-select: none;
 }
 
 #subtitle{
@@ -67,6 +111,8 @@ body{
     font-size: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(105, 105, 105);
+    pointer-events: none;
+    user-select: none;
 }
 
 #description_container{
