--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,44 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(105, 105, 105);
 }
+
+#score_section{
+    padding: 25px;
+    transition: 1s;
+    height: 0px;
+}
+
+#score_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    transition: 1s;
+    opacity: 0;
+}
+
+#score{
+    font-size: 70px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#player_icon{
+    height: 150px;
+    width: 150px;
+    border: 0;
+    border-radius: 50%;
+    background-color: aquamarine;
+    margin: 10px;
+    
+}
+
+.icon_container{
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
